Editor/Test/ok/files/New in ver x + users etc/QM 2.3.5/test CsScript/rejected/test CsScript ExecFile.cs
/exe
 out


PF
CsScript x.Init
PN
x.x.ExecFile("q:\app\hello.cs" "/?")
PO
